--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "validator": "^13.9.0"
   }
